--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.16.1",
     "bcrypt": "^6.0.0",
+    "mongodb": "^6.19.0",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
