--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "University Admission System",
+  "name": "University Admission Management System",
   "short_name": "Admission System",
   "description": "A comprehensive university admission management system for students and administrators",
   "start_url": "/",
