feat: Transform project into comprehensive open source platform
 MAJOR ENHANCEMENTS:
 Complete open source compliance with MIT License
 Professional branding update to 'AdmitPro Portal'
 Comprehensive footer with developer attribution
 World-class documentation (CONTRIBUTING.md, SECURITY.md)
 Responsive navbar with mobile hamburger menu
 Fixed duplicate navbar issue in layout structure

 Open Source Features:
 MIT License for maximum permissibility
 Professional package.json with proper metadata
 Contribution guidelines and security policy
 Developer attribution throughout the application
 Professional badges and project branding

 Technical Improvements:
 Responsive navigation with mobile-first design
 Fixed layout structure with proper flex positioning
 Updated all metadata for SEO and social sharing
 Clean component architecture with proper separation
 Modern gradient designs with accessibility features

 Professional Elements:
 Portfolio integration (amiteshmaurya.com)
 Complete copyright attribution
 Production-ready code quality
 Comprehensive documentation
 Community contribution support

This transforms the project into a standout open source contribution
that showcases modern web development best practices and provides
real value to the educational technology community.

Developed by Amitesh Maurya | amiteshmaurya.com

--- a/package.json
+++ b/package.json
@@ -1,7 +1,27 @@
 {
-  "name": "to-do-list",
-  "version": "0.1.0",
-  "private": true,
+  "name": "admitpro-portal",
+  "version": "1.0.0",
+  "description": "A comprehensive, modern university admission management system built with Next.js, TypeScript, and MongoDB",
+  "author": "Amitesh Maurya <amitesh@amiteshmaurya.com>",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/amitesh-maurya/Admission-Management-System"
+  },
+  "homepage": "https://amiteshmaurya.com",
+  "keywords": [
+    "university",
+    "admission",
+    "management",
+    "nextjs",
+    "typescript",
+    "mongodb",
+    "prisma",
+    "education",
+    "student-portal",
+    "open-source"
+  ],
+  "private": false,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
